--- a/src/main/resources/application-mysql.properties
+++ b/src/main/resources/application-mysql.properties
@@ -4,7 +4,7 @@ server.port=8080
  spring.datasource.url=jdbc:mysql://mysql:3306/Tesis?createDatabaseIfNotExist=true&verifyServerCertificate=false&useSSL=true
  spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
  spring.datasource.username=root
- spring.datasource.password=Sofiafeigin22*
+ spring.datasource.password=Sofiafeigin22
  spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 
