--- a/src/main/resources/application-mysql.properties
+++ b/src/main/resources/application-mysql.properties
@@ -1,6 +1,6 @@
 # Puerto de ejecucion
 server.port=8080
- spring.datasource.url=jdbc:mysql://localhost:3306/Tesis?createDatabaseIfNotExist=true&verifyServerCertificate=false&useSSL=true
+ spring.datasource.url=jdbc:mysql://mysql:3306/Tesis?createDatabaseIfNotExist=true&verifyServerCertificate=false&useSSL=true
  #spring.datasource.url=jdbc:mysql://mysql:3306/Tesis?createDatabaseIfNotExist=true&verifyServerCertificate=false&useSSL=true
  spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
  spring.datasource.username=root
