--- a/src/main/resources/application-mysql.properties
+++ b/src/main/resources/application-mysql.properties
@@ -1,24 +1,39 @@
-# Puerto de ejecución
+# Puerto de ejecucion
 server.port=8080
+ spring.datasource.url=jdbc:mysql://mysql:3306/Tesis?createDatabaseIfNotExist=true&verifyServerCertificate=false&useSSL=true
+ #spring.datasource.url=jdbc:mysql://mysql:3306/Tesis?createDatabaseIfNotExist=true&verifyServerCertificate=false&useSSL=true
+ spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+ spring.datasource.username=root
+ spring.datasource.password=Sofiafeigin22
+ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
-# Conexión a MySQL en host local (desde Docker usar host.docker.internal)
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASSWORD}
-spring.jpa.hibernate.ddl-auto=update
 
-# H2 console (opcional, solo para debug local)
+#Habilitado por defecto en: http://localhost:8080/h2-console
 spring.h2.console.enabled=true
 
 
-# Mostrar estadísticas de Hibernate
+# Valores: none, validate, update, create, create-drop <= default
+# Lo que hace es ver el modelo mapeado (producto) y lo que hace es generar una tabla producto en el mundo relacional
+# los valores de arriba funcionan para trabajar sobre la tabla
+spring.jpa.hibernate.ddl-auto=update
+
+#Habilita estadÃ­sticas
 spring.jpa.properties.hibernate.generate_statistics=true
 logging.level.org.hibernate.stat=DEBUG
 logging.level.org.hibernate.type=WARN
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-# Niveles de log
+#Niveles de Log en orden de importancia
+# Si habilito 3, se habilitan 2 y 1, si habilito 5 se habilitan todos
+#1) ERROR
+#2) WARN
+#3) INFO
+#4) DEBUG
+#5) TRACE
+
+#Perfiles de tiempo de ejecuci\uFFFDn= h2mem   h2file   mysql
+
 logging.level.root=WARN
 logging.level.ar.edu.iua.rest=ERROR
 logging.level.ar.edu.iua.rest.ProductosRestController=DEBUG
